--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "webpack-setup",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack",
-    "watch": "webpack --watch",
-    "build": "webpack -p --config webpack.config.js"
+    "dev": "cross-env NODE_ENV=development webpack",
+    "watch": "cross-env NODE_ENV=development webpack --watch",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,20 @@
     "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.2",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "jshint": "^2.9.5",
+    "jshint-loader": "^0.8.4",
     "node-sass": "^4.5.3",
+    "postcss-scss": "^1.0.2",
     "sass-loader": "^6.0.5",
     "webpack": "^2.5.1"
   },
   "dependencies": {
+    "autoprefixer": "^7.1.3",
+    "postcss": "^6.0.10",
+    "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.5",
     "svgxuse": "^1.2.4"
   }
